Fixing one layout issue.

--- a/cc/css/app.css
+++ b/cc/css/app.css
@@ -3587,6 +3587,8 @@ body.error404 {
   .cc-store .store-item .license-image img {
     max-width: 200px;
     margin-top: -30px; }
+  .cc-store .store-item .sharedaddy {
+    position: static; }
 
 .cc-team-shortcode h2.cc-team-heading {
   padding-top: 30px;
