--- a/cc/scss/components/_pages.scss
+++ b/cc/scss/components/_pages.scss
@@ -1126,6 +1126,9 @@ body.error404 {
       max-width: 200px;
       margin-top: -30px;
     }
+    .sharedaddy {
+      position: static;
+    }
   }
 }
 
